welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: not found: type color
def faireV(c:color){
             ^MethodsPicture:24: error: value Yellow is not a member of object java.awt.Color
	faireV(Color.Yellow);
                     ^